<resources>

    <string name="try_again">Try Again!</string>
    <string name="cancel">Cancel</string>
    <string name="something_went_wrong_pls_try_again">Something went wrong!,Please try again.</string>
    <string name="error_empty_mobile">Mobile is required</string>
    <string name="okay">okay</string>

    <string name="button_skip_now">Skip now</string>
    <string name="button_login">Sign In</string>
    <string name="button_verify_mobile">Verify Mobile Number</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="button_create_account">Create Account</string>
    <string name="welcome_to">Welcome to</string>


    <string name="label_mobile">Enter your mobile</string>

    <string name="hint_name">Enter your name</string>
    <string name="hint_email">Example : info@xyz.com</string>
    <string name="hint_password">* * * * * * * *</string>
    <string name="hint_first_name">John</string>
    <string name="hint_last_name">Doe</string>
    <string name="hint_gender">Select your Gender</string>
    <string name="hint_height">Example : 150</string>
    <string name="hint_weight">Example : 58</string>
    <string name="hint_mobile">Ex : +91 9876543210</string>

    <string name="text_verification_code">Verification Code</string>
    <string name="text_verification_code_sent_to">Please type the verification code sent to %1s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_title_with_date">%1s (%2s)</string>
    <string name="text_user_score">%1s</string>
    <string name="user_score">Audience Score</string>
    <string name="text_overview">Overview</string>
    <string name="text_release_date">Release Date:-</string>
    <string name="text_duration">Duration:-</string>
    <string name="text_production_company">Production Company</string>
    <string name="text_popular_movies">Popular Movies</string>
    <string name="button_view_all">View All</string>
    <string name="button_add_to_wishlist">Add To WishList</string>
    <string name="button_add_to_favourite">Add to Favourite</string>
    <string name="text_search_movie">Search Movie</string>
    <string name="text_upcoming_movies">UPCOMING MOVIES</string>
    <string name="text_trending_movies">Trending MOVIES</string>


</resources>