<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/theme_background_color">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVerificationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_verification_code"
            android:fontFamily="@font/medium"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black_3e"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVerificationCodeSentTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_verification_code_sent_to"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black_3e"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_7sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvVerificationCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_3e"
            app:otp_box_background="@color/gray_d2"
            app:height="50dp"
            app:width="50dp"
            app:bar_enabled="false"
            app:length="6"
            app:otp_text_size="24dp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvVerificationCodeSentTo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerifyOtp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="@font/medium"
            android:textColor="@color/white"
            android:text="@string/button_verify_mobile"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_11sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:backgroundTint="@color/theme_color"
            app:rippleColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/otp_view"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>