<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account_module.screens.AccountActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_background_color"
        android:id="@+id/clFrame"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/clRoot">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nsRoot"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_25sdp"
                    android:paddingEnd="@dimen/_25sdp"
                    android:paddingBottom="@dimen/_25sdp">

                    <com.app.yogesh_verma_movie.account_module.customviews.CustomEditText
                        android:id="@+id/etUserMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        app:setLabel="@string/label_mobile"
                        app:setHint="@string/hint_mobile"
                        android:inputType="textEmailAddress"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_11sdp"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:fontFamily="@font/medium"
                        android:textColor="@color/white"
                        android:text="@string/button_login"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_12ssp"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        app:backgroundTint="@color/theme_color"
                        app:rippleColor="@color/white"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvVerificationCodeSentTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Test Username : +91 9758100455 and otp: 123456"
                        android:fontFamily="@font/regular"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/black_3e"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:paddingHorizontal="@dimen/_7sdp"
                        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <FrameLayout
                android:id="@+id/flAccountContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>